--- a/Bookshelf/Views/AddBook.xaml
+++ b/Bookshelf/Views/AddBook.xaml
@@ -14,11 +14,9 @@
                 <Frame Style="{ StaticResource MainFrame }">
                     <StackLayout>
                         <Image 
-                            Source="{Binding Cover}"                                  
-                            Grid.RowSpan="4"                       
-                            Grid.Column="1"                      
+                            Source="{Binding Cover}"                                                              
                             Aspect="AspectFit"                  
-                            Margin="0,0,10,0"   
+                            Margin="0,0,0,10"   
                             HeightRequest="120"
                             IsVisible="{Binding ImgCoverIsVisible}"
                             />
@@ -125,7 +123,10 @@
                         </Frame>
                         <BoxView HeightRequest="1" BackgroundColor="Black" Color="Black" Margin="0,10,0,10"></BoxView>
                         <Label Text="Situação" VerticalOptions="Fill" HorizontalOptions="Center" TextColor="Black" FontFamily="EBGaramondSemiBold" FontSize="20"/>
-                        <Picker ItemsSource="{Binding StatusList}" Style="{StaticResource Picker}" SelectedIndex="{ Binding PkrStatusSelectedIndex }" />
+                        <Picker ItemsSource="{Binding StatusList}" 
+                                Style="{StaticResource Picker}" 
+                                SelectedIndex="{ Binding PkrStatusSelectedIndex }"
+                                />
                         <Grid HorizontalOptions="CenterAndExpand" Margin="0,10,0,10" IsVisible="{Binding RatingBarIsVisible}">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="*" />
